# gridwatch-ai

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
.bootstrap/: part-01.b64
.github/workflows/: bootstrap.yml  ci.yml  publish-verified.yml
alembic/: env.py
alembic/versions/: 20260721_01_create_energy_readings.py  20260721_02_create_analysis_runs.py
app/: __init__.py  config.py  database.py  detector.py  main.py  models.py  monitoring.py  schemas.py  service.py
docs/: architecture.md  interview-guide.md
scripts/: generate_demo_payload.py
tests/: conftest.py  test_api.py  test_detector.py  test_monitoring.py
