[project]
name = "gridwatch-ai"
version = "1.0.0"
description = "Energy telemetry API with explainable anomaly detection"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pablo Verdejo Alonso" }]
dependencies = [
  "alembic>=1.16,<2",
  "fastapi==0.139.2",
  "numpy>=2.3,<3",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "scikit-learn==1.9.0",
  "sqlalchemy==2.0.51",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest==9.1.1",
  "pytest-cov>=6,<8",
  "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
